--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;
@@ -6,3 +7,6 @@ spring:
     password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    # Hibernate ddl auto (create, create-drop, validate, update)
