--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile group: 'com.opencsv', name: 'opencsv', version: '5.2'
     compile group: 'au.com.bytecode', name: 'opencsv', version: '2.4'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.3.3.RELEASE'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
