--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ plugins {
     id 'war'
     id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
-
-group = 'com.chatbot..'
+group = 'com.muffin_backend_java'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -23,6 +22,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web-services', version: '2.2.5.RELEASE'
     annotationProcessor('org.projectlombok:lombok')
     providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.5.RELEASE'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
@@ -46,9 +46,7 @@ dependencies {
     testCompile('de.adesso:junit-insights:1.0.0')
     compile('com.github.springtestdbunit:spring-test-dbunit:1.3.0')
     compile('org.dbunit:dbunit:2.6.0')
-
 }
-
 test {
     useJUnitPlatform()
     systemProperty 'de.adesso.junitinsights.enabled', 'true'
