--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.3.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'org.springframework.boot' version '2.3.2.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+    id 'war'
     id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
-group = 'api.hawaii'
+group = 'com.muffin_backend_java'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
 repositories {
     mavenCentral()
 }
+
 dependencies {
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     compile group: 'com.h2database', name: 'h2', version: '1.4.200'
@@ -17,9 +20,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.2.5.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.2.5.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web-services', version: '2.2.5.RELEASE'
-    compileOnly 'org.projectlombok:lombok'
     annotationProcessor('org.projectlombok:lombok')
-    //providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.5.RELEASE'
@@ -34,14 +36,14 @@ dependencies {
     compile group: 'au.com.bytecode', name: 'opencsv', version: '2.4'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.3.3.RELEASE'
-    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testCompile('org.junit.jupiter:junit-jupiter:5.4.0')
     testCompile('org.junit.platform:junit-platform-launcher:1.4.0')
     testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
-    //testCompile('de.adesso:junit-insights:1.0.0')
+    testCompile('de.adesso:junit-insights:1.0.0')
     compile('com.github.springtestdbunit:spring-test-dbunit:1.3.0')
     compile('org.dbunit:dbunit:2.6.0')
 }
@@ -51,11 +53,13 @@ test {
     systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
 }
 def querydslSrcDir = 'src/main/querydsl'
+
 querydsl{
     library = 'com.querydsl:querydsl-apt'
     jpa = true
     querydslSourcesDir = querydslSrcDir
 }
+
 compileQuerydsl{
     options.annotationProcessorPath = configurations.querydsl
 }
